bkei/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bkextest
  annotations:  
    cert-manager.io/cluster-issuer: "bke-ci-ucc"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bkeitest.virtorch.brown.edu
    secretName: bkeitest-tls
  rules:
  - host: bkeitest.virtorch.brown.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bkextest
            port: 
              number: 8080
